header style changes

--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="menu">
+            <div id="logo">
+                <img src="Images/svg/main_logo.svg">
+            </div>
+            <div class="menu-content">
+                <div>Главная</div>
+                <div>Экскурсии</div>
+                <div>Личный кабинет</div>
+            </div>
+        </div>
+        <div class="tagli">
+            <p id="travel">ПУТЕШЕСТВУЙ</p>
+            <p id="with">вместе с</p>
+            <p id="pero">PERO TRAVEL</p>
+        </div>
+    </header>
 
     <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
