--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -21,7 +21,7 @@
                 <div>Личный кабинет</div>
             </div>
         </div>
-        <div class="tagli">
+        <div class="tagline">
             <p id="travel">ПУТЕШЕСТВУЙ</p>
             <p id="with">вместе с</p>
             <p id="pero">PERO TRAVEL</p>
