about us creation

--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -15,18 +15,63 @@
             <div id="logo">
                 <img src="Images/svg/main_logo.svg">
             </div>
-            <div class="menu-content">
+            <menu>
                 <div>Главная</div>
                 <div>Экскурсии</div>
                 <div>Личный кабинет</div>
-            </div>
+            </menu>
         </div>
         <div class="tagline">
             <p id="travel">ПУТЕШЕСТВУЙ</p>
             <p id="with">вместе с</p>
             <p id="pero">PERO TRAVEL</p>
         </div>
+        <div class="header-logos">
+            <div>
+                <img src="Images/svg/vk_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/inst_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/fb_logo.svg">
+            </div>
+        </div>
+        <div class="button-header">
+            <div id="button-text">К экскурсиям</div>
+            <div>
+                <img id="arrow1" src="Images/svg/arrow1.svg">
+            </div>
+        </div>
     </header>
+
+    <div class="title">
+        <h3>Популярные экскурсии</h3>
+        <div id="see-all">Смотреть все</div>
+    </div>
+
+
+    <div class="about-us">
+        <img src="Images/images/about_us.png">
+        <article>
+            <h3>О нас</h3>
+            <p>PeroTravel - Первый онлайн-сервис по бронированию экскурсий без очередей и операторов.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. </p> <br>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                explicabo.</p>
+        </article>
+
+    </div>
+    </div>
+
+
+
+
+
+
 
     <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
