--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -63,8 +63,61 @@
                 rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
                 explicabo.</p>
         </article>
-
     </div>
+
+    <div class="title">
+        <h3>Виды экскурсий</h3>
+    </div>
+
+    <div class="excursion">
+        <div class="bus">
+            <div id="bus-logo">
+                <img src="Images/svg/bus_logo.svg">
+            </div>
+            <div id="bus-text">
+                <h3>Автобусный тур</h3>
+                <p>Один из самых насыщенных впечатлениями, доступных по цене и популярных видов отдыха. Во время одной
+                    поездки можно посмотреть достопримечательности сразу нескольких городов, причем обойдется это едва
+                    ли не в разы дешевле классического экскурсионного тура с ночевками в отелях.</p>
+            </div>
+        </div>
+        <div class="jeeping">
+            <div id="jeep-logo">
+                <img src="Images/svg/jeep_logo.svg">
+            </div>
+            <div id="jeep-text">
+                <h3>Джиппинг</h3>
+                <p>Это путешествие на автомобилях высокой проходимости с преодолением естественных препятствий, это
+                    экстремальный вид спорта и отдыха, представляющий собой прохождение туристического маршрута по
+                    бездорожью на автомобилях.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="excursion">
+        <div class="yachting">
+            <div id="yacht-logo">
+                <img src="Images/svg/yacht_logo.svg">
+            </div>
+            <div id="yacht-text">
+                <h3>Яхтинг</h3>
+                <p>Это то же, что круиз на лайнере или прогулка на пароме, только на яхте больше свободы, размеры судна
+                    в разы меньше, нет назойливой команды, можно самостоятельно почувствовать себя капитаном, постоять
+                    за штурвалом. Именно здесь вы почувствуете величайшие просторы Черногор моря.</p>
+            </div>
+        </div>
+        <div class="canyonning">
+            <div id="canyon-logo">
+                <img src="Images/svg/canyonning_logo.svg">
+            </div>
+            <div id="canyon-text">
+                <h3>Каньонинг</h3>
+                <p>Это экстремально-спортивный вид отдыха, который заключается в преодолении каньонов (обводненных или
+                    нет) при помощи альпинистского и иного снаряжения, а иногда и вброд, но без лодок или иных
+                    плавсредств.
+                </p>
+            </div>
+        </div>
     </div>
 
 
