--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -64,11 +64,9 @@
                 explicabo.</p>
         </article>
     </div>
-
     <div class="title">
         <h3>Виды экскурсий</h3>
     </div>
-
     <div class="excursion">
         <div class="bus">
             <div id="bus-logo">
@@ -118,6 +116,22 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div id="choose">Выбирайте на нашем сайте экскурсию, которая подходит именно вам и записывайтесь онлайн без
+        очередей, просто и
+        быстро!
+    </div>
+    <div class="button-excursion">
+        <div id="button-text">К экскурсиям</div>
+        <div>
+            <img id="arrow1" src="Images/svg/arrow1.svg">
+        </div>
+    </div>
+
+    <div class="title">
+        <h3>Галерея</h3>
+        <div id="see-all">Смотреть все</div>
     </div>
 
 
