--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -133,6 +133,32 @@
         <h3>Галерея</h3>
         <div id="see-all">Смотреть все</div>
     </div>
+    <div id="gallery">
+        <div id="photo1">
+            <img src="Images/images/gallery_photo1.png">
+        </div>
+        <div id="photo2">
+            <img src="Images/images/gallery_photo2.png">
+        </div>
+        <div id="photo3">
+            <img src="Images/images/gallery_photo3.png">
+        </div>
+        <div id="photo4">
+            <img src="Images/images/gallery_photo4.png">
+        </div>
+        <div id="photo5">
+            <img src="Images/images/gallery_photo5.png">
+        </div>
+        <div id="photo6">
+            <img src="Images/images/gallery_photo6.png">
+        </div>
+        <div id="photo7">
+            <img src="Images/images/gallery_photo7.png">
+        </div>
+        <div id="photo8">
+            <img src="Images/images/gallery_photo8.png">
+        </div>
+    </div>
 
 
 
