--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -159,6 +159,25 @@
             <img src="Images/images/gallery_photo8.png">
         </div>
     </div>
+    <div class="title">
+        <h3>Отзывы</h3>
+        <div id="see-all">Смотреть все</div>
+    </div>
+
+
+
+    <div class="questions">
+        <div class="form">
+            <h3>Остались вопросы?</h3>
+            <p>Оставь заявку и мы ответим</p>
+            <form name="form-name">
+                <p id="name">Имя</p>
+                <input type="text" name="name" value="">
+            </form>
+
+        </div>
+
+    </div>
 
 
 
