--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -169,12 +169,19 @@
     <div class="questions">
         <div class="form">
             <h3>Остались вопросы?</h3>
-            <p>Оставь заявку и мы ответим</p>
+            <p id="request">Оставь заявку и мы ответим</p>
             <form name="form-name">
                 <p id="name">Имя</p>
                 <input type="text" name="name" value="">
             </form>
-
+            <form>
+                <p id="tel">Телефон</p>
+                <input type="text" name="tel" value="">
+            </form>
+            <form>
+                <p id="email">Почта</p>
+                <input type="text" name="email" value="">
+            </form>
         </div>
 
     </div>
