section style changes

--- a/Final project/excursion.html
+++ b/Final project/excursion.html
@@ -58,7 +58,7 @@
             <p>Дата</p>
         </aside>
 
-        <div>
+        <div class="main-section">
             <h2>Наши туры</h2>
             <section id="tour-description">
                 <img src="Images/images/section_photo.png">
@@ -70,21 +70,140 @@
                         <img id="children-ticket" src="Images/images/children_price.png">
                         <img id="duration" src="Images/images/duration.png">
                     </div>
-                    <div id="tour-description">
+                    <div id="description-text">
                         <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту
                             вас
                             будет сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля
                             или
                             ближайшей автобусной остановки. Пересечение границы без пересадок...</p>
                     </div>
+                    <div class="button-like">
+                    <div class="button-section">
+                        <div id="button-text">Подробнее</div>
+                    </div>
+                    <div class="like">
+                        <img src="Images/svg/heart.svg">
+                    </div>
+                </div>
                 </div>
             </section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </div>
+            <section id="tour-description">
+                <img src="Images/images/section_photo.png">
+                <div class="tour-title">
+                    <p id="title">Автобусный тур</p>
+                    <h3>Золотое кольцо Абхазии (из Адлера)</h3>
+                    <div class="tickets-cost">
+                        <img id="full-ticket" src="Images/images/full_ticket.png">
+                        <img id="children-ticket" src="Images/images/children_price.png">
+                        <img id="duration" src="Images/images/duration.png">
+                    </div>
+                    <div id="description-text">
+                        <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту
+                            вас
+                            будет сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля
+                            или
+                            ближайшей автобусной остановки. Пересечение границы без пересадок...</p>
+                    </div>
+                    <div class="button-like">
+                    <div class="button-section">
+                        <div id="button-text">Подробнее</div>
+                    </div>
+                    <div class="like">
+                        <img src="Images/svg/heart.svg">
+                    </div>
+                </div>
+                </div>
+            </section>
+            <section id="tour-description">
+                <img src="Images/images/section_photo.png">
+                <div class="tour-title">
+                    <p id="title">Автобусный тур</p>
+                    <h3>Золотое кольцо Абхазии (из Адлера)</h3>
+                    <div class="tickets-cost">
+                        <img id="full-ticket" src="Images/images/full_ticket.png">
+                        <img id="children-ticket" src="Images/images/children_price.png">
+                        <img id="duration" src="Images/images/duration.png">
+                    </div>
+                    <div id="description-text">
+                        <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту
+                            вас
+                            будет сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля
+                            или
+                            ближайшей автобусной остановки. Пересечение границы без пересадок...</p>
+                    </div>
+                    <div class="button-like">
+                    <div class="button-section">
+                        <div id="button-text">Подробнее</div>
+                    </div>
+                    <div class="like">
+                        <img src="Images/svg/heart.svg">
+                    </div>
+                </div>
+                </div>
+            </section>
+            <section id="tour-description">
+                <img src="Images/images/section_photo.png">
+                <div class="tour-title">
+                    <p id="title">Автобусный тур</p>
+                    <h3>Золотое кольцо Абхазии (из Адлера)</h3>
+                    <div class="tickets-cost">
+                        <img id="full-ticket" src="Images/images/full_ticket.png">
+                        <img id="children-ticket" src="Images/images/children_price.png">
+                        <img id="duration" src="Images/images/duration.png">
+                    </div>
+                    <div id="description-text">
+                        <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту
+                            вас
+                            будет сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля
+                            или
+                            ближайшей автобусной остановки. Пересечение границы без пересадок...</p>
+                    </div>
+                    <div class="button-like">
+                    <div class="button-section">
+                        <div id="button-text">Подробнее</div>
+                    </div>
+                    <div class="like">
+                        <img src="Images/svg/heart.svg">
+                    </div>
+                </div>
+                </div>
+            </section>
     </div>
-    <footer></footer>
+    </div>
+
+    <footer>
+        <img class="logoColor" src="Images/svg/logo_color.svg">
+        <div class="footerMenu">
+            <p>Главная</p>
+            <p>Экскурсии</p>
+            <p>Личный кабинет</p>
+        </div>
+        <div class="footerContacts">
+            <div class="whatsapp">
+                <img src="Images/svg/whatsapp_logo.svg">
+                <p>+7 964 944 18 74</p>
+            </div>
+            <div class="tg">
+                <img src="Images/svg/tg_logo.svg">
+                <p>+7 918 919 98 28</p>
+            </div>
+            <div class="tgBot">
+                <img src="Images/svg/tg_logo.svg">
+                <p>Телеграм-бот PeroTravel</p>
+            </div>
+        </div>
+        <div>
+            <div class="footerMail">
+                <img src="Images/svg/mail_logo.svg">
+                <p>office@perotravel.ru</p>
+            </div>
+            <div class="footerSM">
+                <img src="Images/svg/vk _color_logo.svg">
+                <img src="Images/svg/inst_color_logo.svg">
+                <img src="Images/svg/fb_color_logo.svg">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
