new photos added

--- a/Final project/excursion_review.html
+++ b/Final project/excursion_review.html
@@ -40,10 +40,10 @@
     </header>
     <article class="excursion_description">
         <div class="description_text">
-        <h2>Описание экскурсии</h2>
-        <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту вас будет
-            сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля или ближайшей
-            автобусной остановки. Пересечение границы без пересадок. </p>
+            <h2>Описание экскурсии</h2>
+            <p>Вас ждет путешествие по "Золотому Кольцу Абхазии" на Мерседес Спринтер (20 мест). По маршруту вас будет
+                сопровождать профессиональный гид. Посадка на экскурсию осуществляется с вашего отеля или ближайшей
+                автобусной остановки. Пересечение границы без пересадок. </p>
         </div>
         <div class="excursion_cost">
             <div id="full_ticket">
@@ -64,12 +64,66 @@
     </div>
 
 
-    <article></article>
-    <div></div>
-    <article></article>
-    <div></div>
-    <div></div>
-    <section></section>
+    <article class="route_description">
+        <h2>Описание маршрута</h2>
+        <li>Город Гагра, Колоннада, ресторан "Гагрипш", Парк принца Ольденбурского;</li>
+        <li>Смотровая площадка "Прощай Родина", "Чабгарский" карниз, Подвесной мост через реку "Бзыбь";</li>
+        <li>Дегустация сыра, меда, вина, чачи (входит в стоимость экскурсии), Голубое Озеро, Юпшарский каньон ("Каменный
+            мешок"), Озеро "Рица", Водопады "Девичьи и мужские слезы".</li>
+        <p>Далее на выбор:</p>
+        <li>Монастырь "Новый Афон", Новоафонская Пещера, "Рукотворный" водопад, храм "Симона Кананита", Лебединое озеро.
+        </li>
+        <li>Термальный источник в с. Приморское.</li>
+    </article>
+
+    <h2>Дополнительные расходы (по желанию)</h2>
+
+    <div class="additional_cost">
+        <div>
+            <img src="Images/images/additional_cost1.png">
+        </div>
+        <div>
+            <img src="Images/images/additional_cost2.png">
+        </div>
+        <div>
+            <img src="Images/images/additional_cost3.png">
+        </div>
+        <div>
+            <img src="Images/images/additional_cost4.png">
+        </div>
+        <div>
+            <img src="Images/images/additional_cost4.png">
+        </div>
+    </div>
+
+    <h2>Важная информация</h2>
+
+    <div class="info">
+        <section class="documents">
+            <p>При пересечении границы (Россия-Абхазия) при себе иметь:</p>
+            <div id="passport">
+                <img src="Images/svg/passport.svg">
+                <span>Паспорт гражданина РФ</span>
+            </div>
+            <div id="for_children">
+                <img src="Images/svg/passport.svg">
+                <div class="for_children_text">
+                    <span>Гражданам до 14 лет свидетельство о рождении</span>
+                    <p>Несовершеннолетние дети пересекают границу в сопровождении родителей, в сопровождении законного
+                        представителя (нотариально заверенная доверенность с указанием страны вывоза ребенка).</p>
+                </div>
+            </div>
+        </section>
+        <section class="documents">
+            <div class="attention">Иностранным гражданам въезд в Абхазию ограничен, кроме граждан Украины, республик ДНР и ЛНР.</div>
+            <div class="attention">При возвращении из Абхазии в Россию сдавать ПЦР-тест не нужно, на карантин помещать не будут
+                (Постановление Правительства РФ 1996-Р от 01.08.2020).</div>
+        </section>
+    </div>
+
+
+
+
     <footer></footer>
 
 </body>
