booking form creation

--- a/Final project/excursion_review.html
+++ b/Final project/excursion_review.html
@@ -115,11 +115,73 @@
             </div>
         </section>
         <section class="documents">
-            <div class="attention">Иностранным гражданам въезд в Абхазию ограничен, кроме граждан Украины, республик ДНР и ЛНР.</div>
-            <div class="attention">При возвращении из Абхазии в Россию сдавать ПЦР-тест не нужно, на карантин помещать не будут
+            <div class="attention">Иностранным гражданам въезд в Абхазию ограничен, кроме граждан Украины, республик ДНР
+                и ЛНР.</div>
+            <div class="attention">При возвращении из Абхазии в Россию сдавать ПЦР-тест не нужно, на карантин помещать
+                не будут
                 (Постановление Правительства РФ 1996-Р от 01.08.2020).</div>
         </section>
     </div>
+
+    <div class="title">
+        <h3>Галерея тура</h3>
+        <div id="see-all">Смотреть все</div>
+    </div>
+
+    <div id="gallery">
+        <div id="photo1">
+            <img src="Images/images/gallery_photo1.png">
+        </div>
+        <div id="photo2">
+            <img src="Images/images/gallery2_photo2.png">
+        </div>
+        <div id="photo3">
+            <img src="Images/images/gallery_photo3.png">
+        </div>
+        <div id="photo4">
+            <img src="Images/images/gallery2_photo4.png">
+        </div>
+        <div id="photo5">
+            <img src="Images/images/gallery_photo5.png">
+        </div>
+        <div id="photo6">
+            <img src="Images/images/gallery_photo6.png">
+        </div>
+        <div id="photo7">
+            <img src="Images/images/gallery_photo7.png">
+        </div>
+        <div id="photo8">
+            <img src="Images/images/gallery_photo8.png">
+        </div>
+    </div>
+
+    <div class="title">
+        <h3>Отзывы</h3>
+        <div id="see-all">Смотреть все</div>
+    </div>
+
+    <section class="booking-form">
+        <div id="lake">
+            <img src="Images/images/page3_photo_lake.png">
+        </div>
+        <div id="to-book">
+            <h3>Забронировать тур</h3>
+            <form class="booking">
+                <input id="date" type="date"><input id="people" type="number"><input id="children-number" type="number">
+                <div class="button-to-book">
+                    <div class="button-header">
+                        <div id="button-text">К другим экскурсиям</div>
+                        <div>
+                            <img id="arrow1" src="Images/svg/arrow1.svg">
+                        </div>
+                    </div>
+                    <div class="like">
+                        <img src="Images/svg/heart.svg">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
 
 
 
