--- a/Final project/excursion_review.html
+++ b/Final project/excursion_review.html
@@ -183,10 +183,39 @@
         </div>
     </section>
 
-
-
-
-    <footer></footer>
+    <footer>
+        <img class="logoColor" src="Images/svg/logo_color.svg">
+        <div class="footerMenu">
+            <p>Главная</p>
+            <p>Экскурсии</p>
+            <p>Личный кабинет</p>
+        </div>
+        <div class="footerContacts">
+            <div class="whatsapp">
+                <img src="Images/svg/whatsapp_logo.svg">
+                <p>+7 964 944 18 74</p>
+            </div>
+            <div class="tg">
+                <img src="Images/svg/tg_logo.svg">
+                <p>+7 918 919 98 28</p>
+            </div>
+            <div class="tgBot">
+                <img src="Images/svg/tg_logo.svg">
+                <p>Телеграм-бот PeroTravel</p>
+            </div>
+        </div>
+        <div>
+            <div class="footerMail">
+                <img src="Images/svg/mail_logo.svg">
+                <p>office@perotravel.ru</p>
+            </div>
+            <div class="footerSM">
+                <img src="Images/svg/vk _color_logo.svg">
+                <img src="Images/svg/inst_color_logo.svg">
+                <img src="Images/svg/fb_color_logo.svg">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
