main page style changes

--- a/Final project/button_test.html
+++ b/Final project/button_test.html
@@ -46,12 +46,10 @@
 </head>
 
 <body>
-    <div class="button-header">
+    <form action="excursion.html" class="button-header">
         <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
-        <div>
+        </form>
 
-        </div>
-    </div>
 </body>
 
 </html>
