--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -58,18 +58,15 @@
             </div>
         </div>
         <a href="excursion.html">
-            <div class="button-header">
-                <div id="button-text">К экскурсиям</div>
-                <div>
-                    <img id="arrow1" src="Images/svg/arrow1.svg">
-                </div>
-            </div>
+            <form action="excursion.html" class="button-header">
+                <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                </form>
         </a>
     </header>
 
     <div class="title">
         <h3>Популярные экскурсии</h3>
-        <div id="see-all"><a href="">Смотреть все</a></div>
+        <div id="see-all"><a href=" ">Смотреть все</a></div>
     </div>
 
 
@@ -144,16 +141,13 @@
         очередей, просто и
         быстро!
     </div>
-    <div class="button-excursion">
-        <div id="button-text">К экскурсиям</div>
-        <div>
-            <img id="arrow1" src="Images/svg/arrow1.svg">
-        </div>
-    </div>
+    <form action="excursion.html" class="button-excursion">
+        <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+        </form>
 
     <div class="title">
         <h3>Галерея</h3>
-        <div id="see-all">Смотреть все</div>
+        <div id="see-all"><a href="excursion.html">Смотреть все</a></div>
     </div>
     <div id="gallery">
         <div id="photo1">
@@ -183,7 +177,7 @@
     </div>
     <div class="title">
         <h3>Отзывы</h3>
-        <div id="see-all">Смотреть все</div>
+        <div id="see-all"><a href=" ">Смотреть все</a></div>
     </div>
 
 
@@ -193,17 +187,20 @@
             <h3>Остались вопросы?</h3>
             <p id="request">Оставь заявку и мы ответим</p>
             <form name="form-name">
-                <p id="name">Имя</p>
+                <p id="name">Имя:</p>
                 <input type="text" name="name" value="">
             </form>
             <form>
-                <p id="tel">Телефон</p>
+                <p id="tel">Телефон:</p>
                 <input type="text" name="tel" value="">
             </form>
             <form>
-                <p id="email">Почта</p>
+                <p id="email">Почта:</p>
                 <input type="text" name="email" value="">
             </form>
+            <form action=" " class="button-excursion">
+                <button id="button-text">Оставить заявку<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                </form>
         </div>
 
     </div>
