--- a/Final project/excursion.html
+++ b/Final project/excursion.html
@@ -209,9 +209,9 @@
     <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
         <div class="footerMenu">
-            <p>Главная</p>
-            <p>Экскурсии</p>
-            <p>Личный кабинет</p>
+            <p><a href="main_page.html">Главная</a></p>
+            <p><a href="excursion.html">Экскурсии</a></p>
+            <p><a href="">Личный кабинет</a></p>
         </div>
         <div class="footerContacts">
             <div class="whatsapp">
