--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -230,10 +230,10 @@
                 <p>Телеграм-бот PeroTravel</p>
             </div>
         </div>
-        <div>
+        <div class="footer-mail-sm">
             <div class="footerMail">
                 <img src="Images/svg/mail_logo.svg">
-                <p>office@perotravel.ru</p>
+                <a href="mailto: office@perotravel.ru"><p>office@perotravel.ru</p></a>
             </div>
             <div class="footerSM">
                 <img src="Images/svg/vk _color_logo.svg">
