--- a/Final project/slides_tests.html
+++ b/Final project/slides_tests.html
@@ -15,6 +15,14 @@
             width: 95%;
             box-sizing: border-box;
             overflow: hidden;
+            border-radius: 10px;
+        }
+
+        #slide1,
+        #slide2,
+        #slide3 {
+            padding-left: 15px;
+            padding-top: 12%;
         }
 
         #slide1 {
@@ -32,7 +40,7 @@
             background-image: url(Images/images/horses.png);
             height: 430px;
             width: 360px;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%);
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%) url(Images/images/horses.png);
             background-repeat: no-repeat;
             border-radius: 10px;
             display: flex;
@@ -43,18 +51,22 @@
             background-image: url(Images/images/waterfall.png);
             height: 430px;
             width: 360px;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%);
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%) url(Images/images/waterfall.png);
             background-repeat: no-repeat;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
         }
 
+        .slides-text {
+            width: 95%;
+            height: 45%;
+        }
+
         .slides-text p {
             font-style: normal;
             font-weight: 500;
             font-size: 12px;
-            line-height: 15px;
             color: #FFFFFF;
         }
 
@@ -64,6 +76,8 @@
             line-height: 17px;
             color: #FFC700;
         }
+
+
 
         .button-precise {
             width: 160px;
@@ -123,8 +137,8 @@
             <div class="slides-text">
                 <p>Автобусный тур</p>
                 <h3>Обзорная по Сочи (из Адлера)</h3>
-                <img src="Images/svg/6 hours.svg">
-                <img src="Images/svg/618 roubles.svg">
+                <img src="Images/svg/one half hour.svg">
+                <img src="Images/svg/1890 roubles.svg">
                 <p>Приглашаем вас на экскурсию
                     "Обзорная по Большому Сочи":
                     Экскурсия начнется с подъёма на гору Большой Ахун - это высшая точка (665 метров) на побережьи
@@ -143,8 +157,8 @@
             <div class="slides-text">
                 <p>Конный тур</p>
                 <h3>Конные прогулки</h3>
-                <img src="Images/svg/6 hours.svg">
-                <img src="Images/svg/618 roubles.svg">
+                <img src="Images/svg/2 hours.svg">
+                <img src="Images/svg/3000 roubles.svg">
                 <p>Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море, горы и лес. На
                     всем пути следования экскурсии вас будут сопровождать опытные инструктора. Катание на лошадях или
                     иппотерапия очень полезна для детей и взрослых...</p>
@@ -171,9 +185,6 @@
         </div>
 
     </div>
-
-
-
 
 </body>
 
