--- a/Final project/excursion.html
+++ b/Final project/excursion.html
@@ -44,14 +44,30 @@
     <div id="main-container">
         <aside>
             <h2>Фильтры</h2>
-            <div>
+            <div class="excursion-prices">
                 <p>Стоимость</p>
                 <input id="price" type="number"><input id="price" type="number">
                 <div class="slidecontainer">
                     <input type="range" min="1" max="100" value="" class="slider" id="cost">
                 </div>
             </div>
-            <p>Количество человек</p>
+            <div>
+                <p>Количество человек</p>
+                <div class="quantity-checkboxes">
+                <input id="quantity-checkbox1" type="checkbox" value="1 чел.">
+                <input id="quantity-checkbox2" type="checkbox" value="2 чел.">
+                <input id="quantity-checkbox3" type="checkbox" value="3 чел.">
+                <input id="quantity-checkbox4" type="checkbox" value="4 чел.">
+                <input id="quantity-checkbox5" type="checkbox" value="5 чел.">
+                <input id="quantity-checkbox6" type="checkbox" value="6 чел.">
+                <input id="quantity-checkbox7" type="checkbox" value="7 чел.">
+                <input id="quantity-checkbox8" type="checkbox" value="8 чел.">
+                <input id="quantity-checkbox9" type="checkbox" value="9 чел.">
+                <input id="quantity-checkbox10" type="checkbox" value="10 чел.">
+                <input id="quantity-checkbox11" type="checkbox" value=" Больше 10 чел.">
+            </div>
+            </div>
+            
             <p>Место</p>
             <p>Длительность</p>
             <p>Дата</p>
